set body 100vw to stop horizontal scrolling in mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,7 @@ body {
     background-size: cover;
     font-family: 'Roboto';
     color: black;
+    width: 100vw;
 }
 
 .sticky {
